syntax = "proto3";

option csharp_namespace = "Protos";

// CREATE
message CreateUserProfileRequest {
	string userId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phoneNumber = 5;
    string streetAddress = 6;
    string postalCode = 7;
    string city = 8;
}

message CreateUserProfileResponse {
    bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    string userId = 4;
}


// READ
message ContactDetails {
    string email = 1;
    string phoneNumber = 2;
}

message Address {
    string streetAddress = 1;
    string postalCode = 2;
    string city = 3;
}

message UserProfile {
    string userId = 1;
    string firstName = 2;
    string lastName = 3;
    string fullName = 4;
    ContactDetails contactDetails = 5;
    Address address = 6;
}

// Get all
message GetAllUserProfilesRequest {}

message GetAllUserProfilesResponse {
    bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    repeated UserProfile userProfiles = 4;
}

// Get one
message GetUserProfileRequest {
    string userId = 1;
}

message GetUserProfileResponse {
    bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    UserProfile userProfile = 4;
}



service GrpcUserProfile {
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
    rpc GetAllUserProfiles(GetAllUserProfilesRequest) returns (GetAllUserProfilesResponse);
    rpc CreateUserProfile(CreateUserProfileRequest) returns (CreateUserProfileResponse);
}